--- a/global_packs/required_resources/Blocky Go Round/assets/createdeco/lang/en_us.json
+++ b/global_packs/required_resources/Blocky Go Round/assets/createdeco/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.createdeco.iron_coin": "Silver Coin",
-  "item.createdeco.iron_coinstack": "Silver Coinstack"
+  "item.createdeco.iron_coinstack": "Silver Coinstack",
+  "item.createdeco.zinc_coin": "Platinum Coin",
+  "item.createdeco.zinc_coinstack": "Platinum Coinstack"
 }
